# minimp4

./: .cproject  .project  CMakeLists.txt  Test-mp4-new  g711.c  g711.h  minimp4.h  mp4recorder.c  mp4recorder.h  run.sh  stream.pcm  video_event.h264
Debug/: build_anyka.sh  build_ingenic.sh  g711.d  makefile  mp4recorder.d  objects.mk  subdir.mk
fdk-aac/: CMakeLists.txt  FDK_audio.h
